# cells2018

./: .gitignore  README.md  cells.sln
Debug/: cells.ilk
cells/: CMakeLists.txt  Source.cpp  cells.vcxproj  cells.vcxproj.filters  file_with_colours.csv  result.csv
cells/Debug/: vc120.idb
cells/Debug/cells.tlog/: CL.read.1.tlog  CL.write.1.tlog  cells.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
